column summarization checkboxes for rows added yield to form has been added

--- a/app/views/helpers/_build_table.html.erb
+++ b/app/views/helpers/_build_table.html.erb
@@ -1,4 +1,7 @@
 <%= form_tag settings[:filter_path], :html => {:'data-type' => 'html'}, :method => 'POST', :class => 'forms', :remote => true, :id => settings[:form_id] do |f| %>
+    <% if content_for?(:table_form) %>
+        <%= yield :table_form %>
+    <% end %>
     <%= render :partial => "/helpers/build_table_filter", :locals => {:settings => settings} %>
     <%= render :partial => "/helpers/build_table_wrapper", :locals => {:settings => settings} %>
 <% end %>
