--- a/app/assets/stylesheets/backbone_css/index.css.scss
+++ b/app/assets/stylesheets/backbone_css/index.css.scss
@@ -10,3 +10,18 @@
  *
  *= require_tree .
 */
+
+
+/* Fix for IE 6: */
+/* *html .fileinput-button {
+  line-height: 22px;
+  margin: 1px -3px 0 0;
+}
+*/
+
+/* Fix for IE 7: */
+/*
+*+html .fileinput-button {
+  margin: 1px 0 0 0;
+}
+*/
