--- a/app/assets/stylesheets/backbone_css/tables.css.scss
+++ b/app/assets/stylesheets/backbone_css/tables.css.scss
@@ -1,7 +1,24 @@
 $marked_item_color: #008000;
 
+table.table_special {
+  margin-bottom: 0px;
+}
+
 table.table_special span.sort_button {
   cursor: Pointer;
+}
+
+form.dataGrid input.own_page {
+  width: 60px;
+}
+
+.dataGrid tr.summarize_page td, .dataGrid tr.summarize_all td {
+  background: #f5f3ef;
+  text-align: right !important;
+}
+
+form.well {
+  background-color: white;
 }
 
 table.table_special span.sort_button.active {
@@ -46,6 +63,7 @@ table.table_special label.datetime_class_label {
 .table thead th.users_form_id_ajax_pager {
   vertical-align: middle;
 }
+
 .table tfoot th.users_form_id_ajax_pager {
   vertical-align: middle;
 }
@@ -55,4 +73,21 @@ table.table_special label.datetime_class_label {
   margin-top: 5px;
   vertical-align: middle;
 }
+
+
+div.filter-paging em.current {
+  font-style: bold;
+  margin: 0px 4px;
+  padding: 4px 10px 4px;
+  font-size: 13px;
+    line-height: 18px;
+
+}
+span.previous_page.disabled, span.next_page.disabled {
+  padding: 4px 10px 4px;
+  font-size: 13px;
+  line-height: 18px;
+  margin: 0 4px;
+}
+
 
