--- a/app/views/helpers/_build_table_pager.html.erb
+++ b/app/views/helpers/_build_table_pager.html.erb
@@ -1,14 +1,16 @@
-<%= ajax_post_link_to "Smazat filtr", settings[:filter_path],
-                      "data-content_id" => settings[:content_id].blank? ? "" : settings[:content_id],
-                      :class => "btn",
-                      "data-post" => {:clear => true}.to_json, :style => "float: left" %>
+<div class="filter-paging clearfix">
+  <div class="reset">
+    <%= ajax_post_link_to "Smazat filtr", settings[:filter_path],
+                          "data-content_id" => settings[:content_id].blank? ? "" : settings[:content_id],
+                          :class => "btn",
+                          "data-post" => {:clear => true}.to_json, :style => "float: left" %>
+  </div>
 
-<div id="<%= settings[:form_id] %>_pagination" class="pager <%= settings[:form_id] %>_pager">
-    <span class="pager_pages">
-      <%= will_paginate settings[:data_paginate], :container => false %>
-    </span>
-    <span class="pager_numberofrecords">
-      <%= page_entries_info settings[:data_paginate] %>
-    </span>
+
+  <div id="<%= settings[:form_id] %>_pagination" class="paging <%= settings[:form_id] %>_pager">
+    <input type="text" class="own_page" value="<%= settings[:params].blank? ? 1 : settings[:params]["page"] %>" >
+    <button class="btn" onclick='$("#" + "<%= settings[:form_id] %>" + "_page").val($(this).prev("input").val()); $("#" + "<%= settings[:form_id] %>").submit(); return false;'>Přejít</button>
+    <%= will_paginate settings[:data_paginate], :container => false %>
+  </div>
 </div>
 
