--- a/app/views/helpers/_build_table_pager.html.erb
+++ b/app/views/helpers/_build_table_pager.html.erb
@@ -8,7 +8,8 @@
 
 
   <div id="<%= settings[:form_id] %>_pagination" class="paging <%= settings[:form_id] %>_pager">
-    <input type="text" class="own_page" value="<%= settings[:params].blank? ? 1 : settings[:params]["page"] %>" >
+    <input type="text" class="own_page" value="<%= settings[:params].blank? ? 1 : settings[:params]["page"] %>"
+           onkeypress="paginate_by_enter('<%= settings[:form_id] %>', this, event);">
     <button class="btn" onclick='$("#" + "<%= settings[:form_id] %>" + "_page").val($(this).prev("input").val()); $("#" + "<%= settings[:form_id] %>").submit(); return false;'>Přejít</button>
     <%= will_paginate settings[:data_paginate], :container => false %>
   </div>
