new design errors 2

--- a/app/views/helpers/_build_table_wrapper.html.erb
+++ b/app/views/helpers/_build_table_wrapper.html.erb
@@ -85,6 +85,7 @@
                                      :class => "multiselect_class") %>
               </div>
             <% when :number %>
+              <div class="inputs range clearfix">
                 <% saved_param = (!settings[:params].blank? && !settings[:params]['date_from'].blank? && !settings[:params]['date_from']["#{col[:table]}.#{col[:name]}"].blank?) ? settings[:params]['date_from']["#{col[:table]}.#{col[:name]}"] : "" %>
 
                 <%= text_field_tag "number_from[#{col[:table]}.#{col[:name]}]", saved_param, {:class => "text first #{settings[:form_id] + '_column_find'}",
@@ -97,7 +98,7 @@
                                                                                             :onchange => "form_submit_watcher('#{settings[:form_id]}')",
                                                                                             :placeholder => "max.",
                                                                                             :title => "Hodnota musí být menší nebo rovna zadané hodnotě"} %>
-                <span></span>
+                </div>
             <% when :date %>
               <div class="inputs range clearfix">
               <% saved_param = (!settings[:params].blank? && !settings[:params]['date_from'].blank? && !settings[:params]['date_from']["#{col[:table]}.#{col[:name]}"].blank?) ? settings[:params]['date_from']["#{col[:table]}.#{col[:name]}"] : "" %>
