--- a/app/views/helpers/_build_table_wrapper.html.erb
+++ b/app/views/helpers/_build_table_wrapper.html.erb
@@ -164,7 +164,7 @@
 
 <script type="text/javascript">
     $('.multiselect_class').multiselect({
-        selectedText:'<span class="active_multiselect">***</span>',
+        selectedText:'<span class="active_multiselect">*****</span>',
         noneSelectedText:"",
         checkAllText:"Označit vše",
         uncheckAllText:"Zrušit vše",
@@ -174,5 +174,6 @@
     }).multiselectfilter();
     //$('#filled_value_' + fid + '_' + rid).multiselect("open");
     $(".ui-multiselect-menu").css("width", "240px");
-    $("button.ui-multiselect").css("width", "40px");
+    $("button.ui-multiselect").css("width", "55px");
+    $("button.ui-multiselect").css("height", "28px");
 </script>
