--- a/app/views/helpers/_build_table_pager.html.erb
+++ b/app/views/helpers/_build_table_pager.html.erb
@@ -3,15 +3,16 @@
     <%= ajax_post_link_to "Smazat filtr", settings[:filter_path],
                           "data-content_id" => settings[:content_id].blank? ? "" : settings[:content_id],
                           :class => "btn",
-                          "data-post" => {:clear => true}.to_json, :style => "float: left" %>
+                          "data-post" => {:clear => true}.to_json %>
   </div>
 
-
-  <div id="<%= settings[:form_id] %>_pagination" class="paging <%= settings[:form_id] %>_pager">
-    <input type="text" class="own_page" value="<%= settings[:params].blank? ? 1 : settings[:params]["page"] %>"
-           onkeypress="paginate_by_enter('<%= settings[:form_id] %>', this, event);">
-    <button class="btn" onclick='$("#" + "<%= settings[:form_id] %>" + "_page").val($(this).prev("input").val()); $("#" + "<%= settings[:form_id] %>").submit(); return false;'>Přejít</button>
-    <%= will_paginate settings[:data_paginate], :container => false %>
-  </div>
+  <% if settings[:data_paginate].total_pages > 1 %>
+      <div id="<%= settings[:form_id] %>_pagination" class="paging <%= settings[:form_id] %>_pager">
+        <input type="text" class="own_page" value="<%= settings[:params].blank? ? 1 : settings[:params]["page"] %>"
+               onkeypress="paginate_by_enter('<%= settings[:form_id] %>', this, event);">
+        <button class="btn" onclick='$("#" + "<%= settings[:form_id] %>" + "_page").val($(this).prev("input").val()); $("#" + "<%= settings[:form_id] %>").submit(); return false;'>Přejít</button>
+        <%= will_paginate settings[:data_paginate], {:container => false, :inner_window => 1, :outer_window => 1} %>
+      </div>
+  <% end %>
 </div>
 
